--- a/index.css
+++ b/index.css
@@ -20,15 +20,15 @@
 	padding-left: 20px;
 }
 
-/*.navbar-dark .navbar-nav .nav-link.active,
-.navbar-dark .navbar-nav .nav-link: hover {
-	color: black;
-}*/
-
 body {
 	font-family: 'Lato', sans-serif;
 	}
 
+.offset:before{
+	display: block;
+	content: "";
+	height: 6rem;
+}
 .heading-content div {
 	background: url(./images/bgbg.jpg);
 	background-size: 1920px 1080px;
@@ -83,4 +83,48 @@ body {
 #about .btn:hover{
 	border:2px solid #1ebba3;
 	cursor: pointer;
+}
+
+/* ----------------- Contact Us Start -------------------*/
+
+label {
+	text-align: left;
+}
+
+/* ----------------- Media Query ------------------------*/
+@media screen and (max-width: 767px) {
+/*Tablets*/
+.navbar{
+	letter-spacing: 0.3rem;
+	padding: 10px 0;
+}
+
+.heading-content h5{
+	font-size: 3em;
+}
+
+.heading-content h1{
+	font-size: 3em;
+}
+
+.heading-content p{
+	font-size: 0.9em;
+}
+@media screen and (max-width: 479px) {
+.navbar{
+	letter-spacing: 0.1rem;
+	padding: 7px 0;
+}
+
+.heading-content h5{
+	font-size: 2em;
+}
+
+.heading-content h1{
+	font-size: 2em;
+}
+
+.heading-content p{
+	font-size: 0.7em;
+}
 }
