--- a/index.css
+++ b/index.css
@@ -20,6 +20,10 @@
 	padding-left: 20px;
 }
 
+body, html, header {
+	height: 100%;
+}
+
 body {
 	font-family: 'Lato', sans-serif;
 	}
@@ -27,42 +31,52 @@ body {
 .offset:before{
 	display: block;
 	content: "";
-	height: 6rem;
-}
-.heading-content div {
-	background: url(./images/bgbg.jpg);
-	background-size: 50% 50%;
-	background-repeat: no-repeat;
+	height: 5rem;
 }
 
-.heading-content {
-	position: absolute;
-	top: 50%;
+header {
+	background: url(./images/bgbg.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: 100% 100%;
+	height: 100%;
+}
+
+#bgbg {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 50%;
 	width: 100%;
-	max-width: 100%;
+	height: 100vh;
 }
 
-.heading-content h5{
+.view h2 {
 	font-size: 4em;
 	font-weight: 300;
 	color: #fff;
 	font-family: monospace;
 }
 
-.heading-content h1{
+.view h4{
 	font-size: 4em;
 	font-weight: bold;
 	color: #fff;
 	font-family: 'Montserrat', sans-serif;
 }
 
-.heading-content p{
+.view p{
 	font-size: 1em;
 	text-transform: uppercase
 	font-weight: lighter;
 	color: #ccc;
 	word-spacing: 5px;
 	letter-spacing: 2px;
+}
+
+h3 {
+	font-size: 75px;
 }
 /* ----------------- About Start -------------------*/
 #about .btn {
@@ -87,44 +101,26 @@ body {
 
 /* ----------------- Contact Us Start -------------------*/
 
-label {
-	text-align: left;
-}
+/* Media Queries*/
+@media screen and (max-width: 480px) {
 
-/* ----------------- Media Query ------------------------*/
-@media screen and (max-width: 767px) {
-/*Tablets*/
-.navbar{
-	letter-spacing: 0.3rem;
-	padding: 10px 0;
-}
-
-.heading-content h5{
-	font-size: 3em;
-}
-
-.heading-content h1{
-	font-size: 3em;
-}
-
-.heading-content p{
-	font-size: 0.9em;
-}
-@media screen and (max-width: 479px) {
-.navbar{
-	letter-spacing: 0.1rem;
-	padding: 7px 0;
-}
-
-.heading-content h5{
+.view h2 {
 	font-size: 2em;
+	text-align: center;
 }
 
-.heading-content h1{
+.view h4{
 	font-size: 2em;
+	text-align: center;
 }
 
-.heading-content p{
-	font-size: 0.7em;
+.view p{
+	font-size: 1em;
+	text-align: center;
 }
+
+h3 {
+	font-size: 37px;
+}
+
 }
